Better demo :sunglasses:

--- a/index.html
+++ b/index.html
@@ -27,96 +27,34 @@
     <div class="noligatures">
         <h1>Test in English</h1>
             <h2>Lowercase letters separated</h2>
-            a b c d e f g h i j k l m n o p q r s t u v x y z
+            <p>a b c d e f g h i j k l m n o p q r s t u v x y z</p>
             <h2>Uppercase letters separated</h2>
-            A B C D E F G H I J K L M N O P Q R S T U V X Y Z
+            <p>A B C D E F G H I J K L M N O P Q R S T U V X Y Z</p>
             <h2>Lowercase letters</h2>
-            the quick brown fox jumps over the lazy dog
+            <p>the quick brown fox jumps over the lazy dog</p>
             <h2>Uppercase letters</h2>
-            THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG
+            <p>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</p>
             <h2>Symbols</h2>
-            , ; : !
-            ? . / §
-            % *
-            ^ $
-            & ~ " # ' { ( [ - | _ \ @ ) ] = + }
+            <p>, ; : ! ? . / § % * ^ $ & ~ " # ' { ( [ - | _ \ @ ) ] = + }</p>
             <h2>Numbers</h2>
             0 1 2 3 4 5 6 7 8 9
             <h2>Ligatures?</h2>
-            ij
-            th
-            st
-            ct
-            et
-            ft
-            ff
-            fs
-            fi
-            fl
-            ffl
-            ffi
+            <p>ij th st ct et ft ff fs fi fl ffl ffi</p>
+            <p class="withligatures">ij th st ct et ft ff fs fi fl ffl ffi</p>
         <hr>
         <h1>Test en français</h1>
             <h2>Lettres minuscules séparées</h2>
-            a b c d e f g h i j k l m n o p q r s t u v x y z
-            à é è ç ë ù ï ê ü î ô œ ÿ â û æ
+            <p>a b c d e f g h i j k l m n o p q r s t u v x y z
+            à é è ç ë ù ï ê ü î ô œ ÿ â û æ</p>
             <h2>Lettres majuscules séparées</h2>
-            A B C D E F G H I J K L M N O P Q R S T U V X Y Z
-            À É È Ç Ë Ù Ï Ê Ü Î Ô Œ Ÿ Â Û Æ
+            <p>A B C D E F G H I J K L M N O P Q R S T U V X Y Z
+            À É È Ç Ë Ù Ï Ê Ü Î Ô Œ Ÿ Â Û Æ</p>
             <h2>Lettres minuscules</h2>
-            dès noël où un zéphyr haï me vêt de glaçons würmiens je dîne d’exquis rôtis de bœuf au kir à l’aÿ d’âge mûr & cætera !
-            voix ambiguë d'un cœur qui, au zéphyr, préfère les jattes de kiwis.
+            <p>dès noël où un zéphyr haï me vêt de glaçons würmiens je dîne d’exquis rôtis de bœuf au kir à l’aÿ d’âge mûr & cætera !</p>
+            <p>voix ambiguë d'un cœur qui, au zéphyr, préfère les jattes de kiwis.</p>
             <h2>Lettres majuscules</h2>
-            DÈS NOËL OÙ UN ZÉPHYR HAÏ ME VÊT DE GLAÇONS WÜRMIENS JE DÎNE D’EXQUIS RÔTIS DE BŒUF AU KIR À L’AŸ D’ÂGE MÛR & CÆTERA !
-            VOIX AMBIGUË D'UN CŒUR QUI, AU ZÉPHYR, PRÉFÈRE LES JATTES DE KIWIS.
-    </div>
-    <br><hr><br>
-    <div class="withligatures">
-        <h1>Test in English</h1>
-            <h2>Lowercase letters separated</h2>
-            a b c d e f g h i j k l m n o p q r s t u v x y z
-            <h2>Uppercase letters separated</h2>
-            A B C D E F G H I J K L M N O P Q R S T U V X Y Z
-            <h2>Lowercase letters</h2>
-            the quick brown fox jumps over the lazy dog
-            <h2>Uppercase letters</h2>
-            THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG
-            <h2>Symbols</h2>
-            , ; : !
-            ? . / §
-            % *
-            ^ $
-            & ~ " # ' { ( [ - | _ \ @ ) ] = + }
-            <h2>Numbers</h2>
-            0 1 2 3 4 5 6 7 8 9
-            <h2>Ligatures?</h2>
-            ij
-            th
-            st
-            ct
-            et
-            ft
-            ff
-            fs
-            fi
-            fl
-            ffl
-            ffi
-        <hr><hr>
-        <h1>Test en français</h1>
-            <h2>Lettres minuscules séparées</h2>
-            a b c d e f g h i j k l m n o p q r s t u v x y z
-            à é è ç ë ù ï ê ü î ô œ ÿ â û æ
-            <h2>Lettres majuscules séparées</h2>
-            A B C D E F G H I J K L M N O P Q R S T U V X Y Z
-            À É È Ç Ë Ù Ï Ê Ü Î Ô Œ Ÿ Â Û Æ
-            <h2>Lettres minuscules</h2>
-            dès noël où un zéphyr haï me vêt de glaçons würmiens je dîne d’exquis rôtis de bœuf au kir à l’aÿ d’âge mûr & cætera !
-            voix ambiguë d'un cœur qui, au zéphyr, préfère les jattes de kiwis.
-            <h2>Lettres majuscules</h2>
-            DÈS NOËL OÙ UN ZÉPHYR HAÏ ME VÊT DE GLAÇONS WÜRMIENS JE DÎNE D’EXQUIS RÔTIS DE BŒUF AU KIR À L’AŸ D’ÂGE MÛR & CÆTERA !
-            VOIX AMBIGUË D'UN CŒUR QUI, AU ZÉPHYR, PRÉFÈRE LES JATTES DE KIWIS.
-    </div>
+            <p>DÈS NOËL OÙ UN ZÉPHYR HAÏ ME VÊT DE GLAÇONS WÜRMIENS JE DÎNE D’EXQUIS RÔTIS DE BŒUF AU KIR À L’AŸ D’ÂGE MÛR & CÆTERA !</p>
+            <p>VOIX AMBIGUË D'UN CŒUR QUI, AU ZÉPHYR, PRÉFÈRE LES JATTES DE KIWIS.</p>
     </div>
     <br><hr><br>
     <div>
