Added one (ugly) font generated with 'fontify', open source software that just waits to be redevelopped.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet alternate" type="text/css" media="screen" href="css/Ubuntu.css" title="Ubuntu"/>
     <link rel="stylesheet alternate" type="text/css" media="screen" href="css/Tangerine.css" title="Tangerine"/>
     <link rel="stylesheet alternate" type="text/css" media="screen" href="css/LilianFeb.css" title="LilianFeb"/>
+    <link rel="stylesheet alternate" type="text/css" media="screen" href="css/LilianFeb2.css" title="LilianFeb2"/>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
@@ -22,6 +23,7 @@
         <input type="submit" onclick="switch_style('Ubuntu');return false;" name="theme" value="Ubuntu Theme" id="Ubuntu">
         <input type="submit" onclick="switch_style('Tangerine');return false;" name="theme" value="Tangerine Theme" id="Tangerine">
         <input type="submit" onclick="switch_style('LilianFeb');return false;" name="theme" value="LilianFeb Theme" id="LilianFeb">
+        <input type="submit" onclick="switch_style('LilianFeb2');return false;" name="theme" value="LilianFeb2 Theme" id="LilianFeb2">
         </form>
     </div>
     <div class="noligatures">
