--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <body>
     <div>
         <form>
-        <input type="submit" onclick="switch_style('Default');return false;" name="theme" value="Default Theme" id="Default">
-        <input type="submit" onclick="switch_style('Bootstrap');return false;" name="theme" value="Bootstrap Theme" id="Bootstrap">
-        <input type="submit" onclick="switch_style('Ubuntu');return false;" name="theme" value="Ubuntu Theme" id="Ubuntu">
-        <input type="submit" onclick="switch_style('Tangerine');return false;" name="theme" value="Tangerine Theme" id="Tangerine">
-        <input type="submit" onclick="switch_style('LilianFeb');return false;" name="theme" value="LilianFeb Theme" id="LilianFeb">
-        <input type="submit" onclick="switch_style('LilianFeb2');return false;" name="theme" value="LilianFeb2 Theme" id="LilianFeb2">
+        <input type="submit" onclick="switch_style('Default');return false;" name="theme" value="Default font" id="Default">
+        <input type="submit" onclick="switch_style('Bootstrap');return false;" name="theme" value="Bootstrap font" id="Bootstrap">
+        <input type="submit" onclick="switch_style('Ubuntu');return false;" name="theme" value="Ubuntu font" id="Ubuntu">
+        <input type="submit" onclick="switch_style('Tangerine');return false;" name="theme" value="Tangerine font" id="Tangerine">
+        <input type="submit" onclick="switch_style('LilianFeb');return false;" name="theme" value="LilianFeb font" id="LilianFeb">
+        <input type="submit" onclick="switch_style('LilianFeb2');return false;" name="theme" value="LilianFeb2 font" id="LilianFeb2">
         </form>
     </div>
     <div class="noligatures">
