Add a text area to experiment with the font

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         <input type="submit" onclick="switch_style('LilianMar');return false;" name="theme" value="LilianMar font" id="LilianMar">
         </form>
     </div>
+    <div>
+        <h2>Playground</h2>
+        <p>See this own font in action!</p>
+        <textarea placeholder="The quick brown fox jumps over the lazy dog. 0123456789. ; : ! ? / & ~ # ' { ( [ - | _ \\ @ ) ] } = +"></textarea>
+    </div>
+    <br><hr><br>
     <div class="noligatures">
         <h1>Test in English</h1>
             <h2>Lowercase letters separated</h2>
