--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div>
         <h2>Playground</h2>
-        <p>See this own font in action!</p>
+        <p>See this font in action!</p>
         <textarea placeholder="The quick brown fox jumps over the lazy dog. 0123456789. ; : ! ? / & ~ # ' { ( [ - | _ \\ @ ) ] } = +"></textarea>
     </div>
     <br><hr><br>
